<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_carona_autocomplete_origin"
        android:id="@+id/search_carona_autocomplete_origin"
        android:layout_toStartOf="@+id/add_carona_hint"
        android:layout_below="@+id/add_carona_hint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_carona_autocomplete_destination"
        android:id="@+id/search_carona_autocomplete_destination"
        android:layout_toStartOf="@+id/search_carona_autocomplete_origin"
        android:layout_below="@+id/search_carona_autocomplete_origin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_carona_confirm"
        android:id="@+id/search_carona_confirm"
        android:layout_below="@+id/search_carona_autocomplete_destination"
        android:layout_centerHorizontal="true"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_carona_hint"
        android:id="@+id/add_carona_hint"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
