<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/offer_carona_autocomplete_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/offer_carona_hint"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_toStartOf="@+id/offer_carona_hint"
        android:hint="@string/offer_carona_autocomplete_origin" />

    <AutoCompleteTextView
        android:id="@+id/offer_carona_autocomplete_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/offer_carona_autocomplete_origin"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_toStartOf="@+id/offer_carona_autocomplete_origin"
        android:hint="@string/offer_autocomplete_destination" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offer_carona_autocomplete_destination"
        android:layout_centerHorizontal="true"
        android:padding="10dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:padding="10dp" />

    <Button
        android:id="@+id/offer_carona_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/offer_carona_confirm" />

    <TextView
        android:id="@+id/offer_carona_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/offer_carona_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>
